# pychronia-storygen

./: .gitignore  main.py  pyproject.toml
example_project/: configuration.yaml  macros.txt
example_project/characters/: _common_character_conclusion.txt  _common_character_intro.txt  _common_character_introduction.txt  enemy_sheet.txt  goblin_sheet.txt  hero_sheet.txt
example_project/gamemasters/: game_facts.txt  game_inventory_data.yaml  game_inventory_per_crate.txt  game_inventory_per_section.txt  game_items_summary.txt  game_symbols.txt
example_project/lore/: world_history.txt  world_history_full.txt  world_history_summary.txt
example_project/summaries/: game_facts_summary.txt
src/pychronia_storygen/: cli.py  document_formats.py  inventory.py  mysteryparty_common_utils.py  rpg_sheet_generator.py  story_tags.py
