[tool.poetry]
name = "pychronia-storygen"
version = "0.1.0"
description = ""
authors = ["Pascal Chambon <pythoniks@gmail.com>"]
readme = "README.rst"
packages = [{include = "pychronia_storygen", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.3"
click = "^8.1.7"
pyyaml = "^6.0.1"
jinja-macro-tags = {git = "https://github.com/pakal/jinja-macro-tags"}
rst2pdf = "^0.101"
reportlab = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
